--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
 			bottom:20px;
 			top:175px;
 		}
+		#short_url{
+			width:250px;
+		}
 	</style>
 </head>
 <body>
@@ -37,21 +40,22 @@
 			<label for='language'>Language:</label>
 			<select id='language'>
 				<option value='text'>Plaintext</option>
+				<option value='csharp'>C#</option>
 				<option value='javascript'>Javascript</option>
 				<option value='json'>JSON</option>
-				<option value='csharp'>C#</option>
+				<option value='markdown'>Markdown</option>
 				<option value='perl'>Perl</option>
+				<option value='python'>Python</option>
+				<option value='sql'>SQL</option>
 			</select>
 		</span>
 		<div id="input-field"></div>
 		<button id="save-button">Save</button>
 		<span style='float:right'>
-			<label for='short_url'>Short URL:</label>
+			<label for='short_url'>URL:</label>
 			<input type='text' disabled='disabled' id='short_url'></input>
 		</span>
 	</div>
-
-
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/ace-noconflict.js" type="text/javascript"></script>
@@ -61,10 +65,9 @@
 	<script src="/static/js/ace/build/src/mode-csharp-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/mode-json-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/mode-text-noconflict.js" type="text/javascript"></script>
-	<script src="/static/js/base64.js" type="text/javascript"></script>
-	<script src="/static/js/rawdeflate.js" type="text/javascript"></script>
-	<script src="/static/js/rawinflate.js" type="text/javascript"></script>
-	<script src="/static/js/sjcl.js" type="text/javascript"></script>
+	<script src="/static/js/ace/build/src/mode-markdown-noconflict.js" type="text/javascript"></script>
+	<script src="/static/js/ace/build/src/mode-python-noconflict.js" type="text/javascript"></script>
+	<script src="/static/js/ace/build/src/mode-sql-noconflict.js" type="text/javascript"></script>
 	<script type="text/javascript">
 
 		function initEditor() {
@@ -81,6 +84,9 @@
 				, CsharpMode = ace.require("ace/mode/csharp").Mode
 				, JSONMode = ace.require("ace/mode/json").Mode
 				, TextMode = ace.require("ace/mode/text").Mode
+				, PythonMode = ace.require("ace/mode/python").Mode
+				, MarkdownMode = ace.require("ace/mode/markdown").Mode
+				, SQLMode = ace.require("ace/mode/sql").Mode
 
 			if ( language === 'text'){
 				window.aceEditor.getSession().setMode(new TextMode());
@@ -92,6 +98,12 @@
 				window.aceEditor.getSession().setMode(new CsharpMode());
 			}else if( language === 'perl'){
 				window.aceEditor.getSession().setMode(new PerlMode());
+			}else if( language === 'python'){
+				window.aceEditor.getSession().setMode(new PythonMode());
+			}else if( language === 'markup'){
+				window.aceEditor.getSession().setMode(new MarkdownMode());
+			}else if( language === 'sql'){
+				window.aceEditor.getSession().setMode(new SQLMode());
 			}
 		}
 
@@ -99,198 +111,57 @@
 
 			initEditor();
 
-			var base64
-			, check
-			, checksum
-			, deflated
-			, encoded
-			, input
-			, chunkEncoded
-			, expandShortUrl
-			, loadData
-			, packData
-			, getShortUrl;
 
-			getShortUrl = function(url){
-				return $.ajax({
-					url:"http://api.bitly.com/v3/shorten?callback=?"
-					, dataType: 'json'
-					, data: {
-						"format": "json"
-						, "apiKey": "R_db4dda4e46e10ee6f38868ecf63359c5"
-						, "login": "tjkells"
-						, "longUrl": url
-					}
-				});
-			};
-
-			expandShortUrl = function(hash){
-				return $.ajax({
-					url:"http://api.bitly.com/v3/expand?callback=?"
-					, dataType: 'json'
-					, data: {
-						"format": "json"
-						, "apiKey": "R_db4dda4e46e10ee6f38868ecf63359c5"
-						, "login": "tjkells"
-						, "hash": hash
-					}
-				});
-			};
-
-			checksum = function(string) {
-				var chk, chr, i;
-				chk = 0;
-				for (i in string) {
-					chr = string[i];
-					chk += chr.charCodeAt(0) * (i + 1);
-				}
-				return chk % 10;
-			};
-
-			chunkEncoded = function(encoded){
-				var chunksObj = {}
-					, chunks = []
-					, chunkUrls = []
-					, chunkUrls2 = [];
-
-				//Stuff 2000 character strings into an array
- 				while( encoded.length > 2000 ){
-					chunksObj[ Object.keys(chunks).length ] = encoded.slice(0,2000);
-					chunks.push(encoded.slice(0,2000));
-					encoded = encoded.slice(2000,encoded.length);
-				}
-
-				//Stuff the remainder into the array
-				chunksObj[ Object.keys(chunks).length ] = encoded;
-				chunks.push(encoded);
-				console.log( chunksObj )
-
-				for( var k in chunksObj){
-					var chunk = chunksObj[k];
-					getShortUrl(window.location.href.replace(/#/, '') + '#' + chunk).success(function(res){
-						chunkUrls.push( res.data.url.split('http://bit.ly/')[1] );
-						console.log( chunkUrls )
-						if (chunks.length == chunkUrls.length){
-							getShortUrl(window.location.href.replace(/#/,'')+'#expand='+chunkUrls)
-								.success(function(res){
-									$('#short_url').val(res.data.url);
-								});
-						}
-					});
-				}
-				for (var i = 0; i < chunks.length; i++) {
-					var chunk = chunks[i];
-					getShortUrl(window.location.href.replace(/#/, '') + '#' + chunk).success(function(res){
-						chunkUrls.push( res.data.url.split('http://bit.ly/')[1] );
-						console.log( chunkUrls )
-						if (chunks.length == chunkUrls.length){
-							getShortUrl(window.location.href.replace(/#/,'')+'#expand='+chunkUrls)
-								.success(function(res){
-									$('#short_url').val(res.data.url);
-								});
-						}
-					});
-
-				}
- 			};
-
-			packData = function(input){
-				var base64
-					, encrypted
-					, deflated
-					, encoded
-					, language
-					, data;
-
-				language = $('#language').val();
-
-				//Add on some meta-data wooooo
-				data = {
-					"paste_data": input
-					,"language": language
-				}
-
-				//Encrypt
-				encrypted = sjcl.encrypt("somebiglongsecretkeygoeshere",JSON.stringify(data));
-				//Deflate
-				deflated = RawDeflate.deflate(encrypted);
-
-				//Base64 Encode
-				base64 = Base64.toBase64(deflated);
-
-				encoded = base64;
-
-				if ( encoded.length > 2047 ){
-					console.log(encoded)
-					chunkEncoded( encoded );
-				}else{
-					longurl = window.location.href.replace(/#/, '') + '#' + encoded;
-					getShortUrl(longurl).success(function(res){ $('#short_url').val(res.data.url); });
-				}
-			};
-
-			unpackData = function(input){
-				console.log(input)
-				var base64
-					, decrypted
-					, deflated
-					, inflated
-					, decoded_input;
-
-				base64 = input.slice(0, (input.length - 2) + 1 || 9e9);
-				deflated = Base64.fromBase64(base64);
-
-				//Inflate
-				inflated = RawDeflate.inflate(deflated);
-				//Decrypt Inflated
-				decrypted = sjcl.decrypt('somebiglongsecretkeygoeshere',inflated);
-				//Parse into native object
-				decoded_input = JSON.parse(decrypted);
-				loadData(decoded_input);
-			};
-
-			loadData = function(data){
+			var loadData = function(data){
+				data = JSON.parse(data)
 				$('#language').val(data.language);
 				window.aceEditor.getSession().setValue(data.paste_data);
 				setAceMode(data.language);
 			};
+
+			var getData  = function(){
+				var hash = window.location.hash.replace(/^#/, '');
+				$.ajax({
+					url: '/v1/get/' + hash
+					,success: function(res){
+						loadData(res);
+						setShortUrl(hash);
+					}
+				})
+			}
+
+			var setShortUrl = function(hash){
+				$('#short_url').val('http://'+window.location.host + '/#' + hash );
+			}
 
 			$('#language').change(function(){
 				setAceMode(this.value);
 			})
 
 			$('#save-button').click(function(){
-				input = window.aceEditor.getSession().getValue();
-				packData(input);
+				var language = $('#language').val();
+				var input = window.aceEditor.getSession().getValue();
+				var payload = {
+					"paste_data": input
+					,"language": language
+				}
+				// XXX - AJAX call to save goes here
+				$.ajax({
+					url:'/v1/save'
+					, type: 'POST'
+					, data: {"data":JSON.stringify(payload)}
+					, success: function(res){
+						setShortUrl(res)
+					}
+				})
 			});
 
-			if (window.location.hash) {
-				getShortUrl(window.location.href).success(function(res){ $('#short_url').val(res.data.url); });
-				hash = window.location.hash.replace(/^#/, '');
-				window.location.hash = '';
+			window.onhashchange = getData;
 
-				//If the hash starts with 'expand' we know we have to blow out the list of hashes
-				// and expand multiple bit.ly urls here and decode the returned mega-hash
-				if (hash.lastIndexOf("expand", 0) === 0){
-
-					//bitly hashes are comma-separated
-					var hashes = hash.split('expand=')[1].split(',')
-						,expanded = [];
-					for (var i = 0; i < hashes.length; i++) {
-						var hash = hashes[i];
-						expandShortUrl(hash).success(function(res){
-							expanded.push( res.data.expand[0].long_url.split('http://127.0.0.1:5000/#')[1] );
-							if(expanded.length == hashes.length ){
-								console.log(expanded)
-								hash = expanded.join('');
-								unpackData(hash);
-							}
-						});
-					};
-				}else{
-					unpackData(hash);
-				}
+			if (window.location.hash){
+				getData();
 			}
+
 		});
 	</script>
 
