--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
 			color: #333;
 		}
 
-		#content {
-			width: 940px;
+		#header-content {
+			min-width: 480px;
+			max-width: 920px;
 			margin: 0 auto;
 		}
-
 		input, textarea, button {
 			font: 15px 'Monaco', 'Bitstream Vera Sans', 'Courier', monospace;
 		}
@@ -21,41 +21,60 @@
 			overflow: hidden;
 		}
 
-		#input-field {
-			position: absolute;
-			left: 10px;
-			right:10px;
-			bottom:20px;
-			top:175px;
+		#ace-editor {
+			display:inline-block;
+			height: 750px;
+			width: 99%;
+		}
+		#markdown-display{
+			display:none;
+			background-color:#cdcdcd;
+			height: 750px;
+			width: 50%;
 		}
 		#short_url{
 			width:250px;
+		}
+		#save-button{
+			position: absolute;
+			bottom: 25px;
+			left: 100px;
+		}
+		#editor-container{
+			text-align: center;
+			margin-left:auto;
+			margin-right:auto;
 		}
 	</style>
 </head>
 <body>
 	<div id="content">
-		<h1>Pastie</h1>
-		<span style='float:right'>
-			<label for='language'>Language:</label>
-			<select id='language'>
-				<option value='text'>Plaintext</option>
-				<option value='sh'>Bash</option>
-				<option value='csharp'>C#</option>
-				<option value='javascript'>Javascript</option>
-				<option value='json'>JSON</option>
-				<option value='markdown'>Markdown</option>
-				<option value='perl'>Perl</option>
-				<option value='python'>Python</option>
-				<option value='sql'>SQL</option>
-			</select>
-		</span>
-		<div id="input-field"></div>
-		<button id="save-button">Save</button>
-		<span style='float:right'>
+		<div id="header-content">
+			<h1>Pastie</h1>
 			<label for='short_url'>URL:</label>
 			<input type='text' disabled='disabled' id='short_url'></input>
-		</span>
+			<span style="float: right">
+				<label for='language'>Language:</label>
+				<select id='language'>
+					<option value='text'>Plaintext</option>
+					<option value='sh'>Bash</option>
+					<option value='csharp'>C#</option>
+					<option value='javascript'>Javascript</option>
+					<option value='json'>JSON</option>
+					<option value='markdown'>Markdown</option>
+					<option value='perl'>Perl</option>
+					<option value='python'>Python</option>
+					<option value='sql'>SQL</option>
+				</select>
+			</span>
+		</div>
+
+		<div id="editor-container">
+			<div id="ace-editor"></div>
+			<div id="markdown-display"></div>
+			<button id="save-button">Save</button>
+		</div>
+
 	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -73,7 +92,7 @@
 	<script type="text/javascript">
 
 		function initEditor() {
-			window.aceEditor = ace.edit("input-field");
+			window.aceEditor = ace.edit("ace-editor");
 			window.aceEditor.setTheme("ace/theme/monokai");
 			window.aceEditor.renderer.setShowPrintMargin(false);
 			window.aceEditor.setHighlightActiveLine(false);
