set window hash to new url on save

--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,7 @@
 
 			var setShortUrl = function(hash){
 				$('#short_url').val('http://'+window.location.host + '/#' + hash );
+				window.location.hash = "#" + hash;
 			}
 
 			$('#language').change(function(){
