--- a/templates/index.html
+++ b/templates/index.html
@@ -8,32 +8,32 @@
 			font: 1.6em 'Georgia', 'Tahoma', serif;
 			color: #333;
 			height: 100%;
+			background-color: #fbfbfb
 		}
 
 		#header-content {
-			min-width: 480px;
-			max-width: 920px;
+			width: 100%;
 			margin: 0 auto;
 		}
 		input, textarea, button {
 			font: 15px 'Monaco', 'Bitstream Vera Sans', 'Courier', monospace;
 		}
 		body {
-			overflow: hidden;
+			overflow: auto;
 		}
 
 		#ace-editor {
 			display:inline-block;
-			min-height: 625px;
-			max-height: 750px;
+			height:100%;
 			width: 99%;
 		}
 		#markdown-display{
 			display:none;
 			float:right;
-			background-color:#cdcdcd;
-			height: 100%;
-			width: 50%;
+			border:2px inset #cdcdcd;
+			font-size: .60em;
+			padding: 5px;
+			background-color: #ffffff
 		}
 		#short_url{
 			width:275px;
@@ -41,11 +41,9 @@
 		#content{
 			height:100%;
 		}
-		#editor-container{
-			margin-left:auto;
-			margin-right:auto;
-		}
 	</style>
+	<!-- <link rel="stylesheet" href="/static/js/highlight/styles/default.css"> -->
+	<link rel="stylesheet" href="/static/js/highlight/styles/github.css">
 </head>
 <body>
 	<div id="content">
@@ -61,6 +59,7 @@
 					<option value='csharp'>C#</option>
 					<option value='javascript'>Javascript</option>
 					<option value='json'>JSON</option>
+					<option value='lua'>Lua</option>
 					<option value='markdown'>Markdown</option>
 					<option value='perl'>Perl</option>
 					<option value='python'>Python</option>
@@ -71,13 +70,12 @@
 			</span>
 		</div>
 
-		<div id="editor-container">
-			<div id="ace-editor"></div>
-			<div id="markdown-display"></div>
-		</div>
+		<table id="editor-container">
+			<tr><td><div id="markdown-display"></div></td></tr>
+			<tr><td><div id="ace-editor"></div></td></tr>
+		</table>
 
 	</div>
-
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/ace-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/mode-xml-noconflict.js" type="text/javascript"></script>
@@ -91,8 +89,12 @@
 	<script src="/static/js/ace/build/src/mode-sql-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/mode-xml-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/ace/build/src/mode-sh-noconflict.js" type="text/javascript"></script>
+	<script src="/static/js/ace/build/src/mode-lua-noconflict.js" type="text/javascript"></script>
 	<script src="/static/js/showdown.js" type="text/javascript"></script>
+	<script src="/static/js/highlight/highlight.pack.js" type="text/javascript"></script>
 	<script type="text/javascript">
+		//Initialize highlightJS
+		hljs.initHighlightingOnLoad();
 
 		function initEditor() {
 			window.aceEditor = ace.edit("ace-editor");
@@ -104,12 +106,16 @@
 		converter = new Showdown.converter();
 
 		var convertText = function() {
+			//$('#ace-editor').slideUp();
 			// get input text
 			var text = window.aceEditor.getSession().getValue();
-			// Do the conversio
+			// Do the conversion
 			text = converter.makeHtml(text);
 
 			$('#markdown-display').html(text);
+			$('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+			window.aceEditor.resize();
+
 		};
 
 		function setAceMode( language ){
@@ -118,6 +124,7 @@
 				, PerlMode = ace.require("ace/mode/perl").Mode
 				, CsharpMode = ace.require("ace/mode/csharp").Mode
 				, JSONMode = ace.require("ace/mode/json").Mode
+				, LuaMode = ace.require("ace/mode/lua").Mode
 				, TextMode = ace.require("ace/mode/text").Mode
 				, PythonMode = ace.require("ace/mode/python").Mode
 				, MarkdownMode = ace.require("ace/mode/markdown").Mode
@@ -125,8 +132,12 @@
 				, SQLMode = ace.require("ace/mode/sql").Mode
 				, XMLMode = ace.require("ace/mode/xml").Mode
 
-			$('#ace-editor').width('100%');
+			$('#ace-editor').width('99%');
+			$('#ace-editor').height( $(window).height() - $('#header-content').height() - 50 );
+			window.aceEditor.resize();
+
 			$('#markdown-display').hide();
+			$('#ace-editor').show();
 
 			if ( language === 'text'){
 				window.aceEditor.getSession().setMode(new TextMode());
@@ -140,9 +151,10 @@
 				window.aceEditor.getSession().setMode(new PerlMode());
 			}else if( language === 'python'){
 				window.aceEditor.getSession().setMode(new PythonMode());
+			}else if( language === 'lua'){
+				window.aceEditor.getSession().setMode(new LuaMode());
 			}else if( language === 'markdown'){
 				window.aceEditor.getSession().setMode(new MarkdownMode());
-				$('#ace-editor').width('50%');
 				$('#markdown-display').show().css({'display':'inline-block'});
 				convertText();
 			}else if( language === 'sql'){
@@ -155,9 +167,16 @@
 		}
 
 		$(function(){
-
+			//Initialize ace editor
 			initEditor();
 
+			window.aceEditor.getSession().on('change', convertText);
+
+			$(window).resize(function() {
+				$('#ace-editor').width('99%');
+				$('#ace-editor').height( $(window).height() - $('#header-content').height() - 50 );
+				window.aceEditor.resize();
+			});
 
 			var loadData = function(data){
 				data = JSON.parse(data)
@@ -193,7 +212,7 @@
 					"paste_data": input
 					,"language": language
 				}
-				// XXX - AJAX call to save goes here
+
 				$.ajax({
 					url:'/v1/save'
 					, type: 'POST'
