temporarily disable theme

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
 
 		function initEditor() {
 			window.aceEditor = ace.edit("ace-editor");
-			window.aceEditor.setTheme("ace/theme/monokai");
+			//window.aceEditor.setTheme("ace/theme/monokai");
 			window.aceEditor.renderer.setShowPrintMargin(false);
 			window.aceEditor.setHighlightActiveLine(false);
 		}
