--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,71 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" href="static/js/codemirror-2.34/lib/codemirror.css">
+	<link rel="stylesheet" href="static/js/codemirror-2.34/theme/monokai.css">
 	<style type='text/css'>
 		body {
 			margin: 0px;
 			padding: 0px;
-			font: 1.6em 'Georgia', 'Tahoma', serif;
+			overflow: auto;
 			color: #333;
 			height: 100%;
 			background-color: #fbfbfb;
-			font: 22px 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
+			font: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
 		}
 
-		#header-content {
-			width: 100%;
-			min-width: 640px;
-			margin: 0 auto;
+		#content{
+			/*border: 3px solid #971111;
+			background-color: #DDD;*/
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			padding-top: 155px;
 		}
+		/*So note carefully that, in order to resize the editor, you set a width on the wrapper (.CodeMirror)
+		and a height on the scroller (class CodeMirror-scroll) element.*/
+		.CodeMirror {
+			border: 1px solid #eee;
+			font-size: 12px;
+			line-height: 1.2;
+		}
+
+		.CodeMirror-lines {
+			margin-left: 15px;
+		}
+		.CodeMirror-scroll {
+			height: auto;
+			min-height: 650px;
+			overflow-y: hidden;
+			overflow-x: auto;
+		}
+
+		#header-content{
+			/*border: 2px solid #279895;
+			background-color: #FFF;*/
+			padding: 0px 10px 0px 10px;
+			font-size: 22px;
+			height: 150px;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+		}
+
 		input, textarea, button {
 			font: 15px 'Monaco', 'Bitstream Vera Sans', 'Courier', monospace;
 		}
-		body {
-			overflow: auto;
-		}
 
-		#ace-editor {
-			height:100%;
-			width: 99%;
-		}
-
-		#markdown-display{
-			display:none;
-			border:2px inset #cdcdcd;
-			font-size: .60em;
-			padding: 5px;
-			background-color: #ffffff
-		}
-
-		#markdown-edit{
-			display:none;
-			cursor: pointer;
-			font-size: .65em;
-		}
 		#short_url{
 			width:275px;
 		}
-		#content{
-			height:100%;
-		}
+
 	</style>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="/static/js/codemirror-2.34/lib/codemirror.js"></script>
-	<link rel="stylesheet" href="static/js/codemirror-2.34/lib/codemirror.css">
-	<script src="/static/js/codemirror-2.34/mode/javascript/javascript.js"></script>
+	<script src="/static/js/codemirror-2.34/lib/util/loadmode.js"></script>
 </head>
 <body>
 	<div id="content">
@@ -63,26 +77,78 @@
 				<label for='language'>Language:</label>
 				<select id='language'>
 					<option value='text'>Plaintext</option>
-					<option value='sh'>Bash</option>
-					<option value='csharp'>C#</option>
+					<option value='shell'>Bash</option>
+					<option value='clike'>C#</option>
 					<option value='javascript'>Javascript</option>
 					<option value='json'>JSON</option>
 					<option value='lua'>Lua</option>
 					<option value='markdown'>Markdown</option>
 					<option value='perl'>Perl</option>
 					<option value='python'>Python</option>
-					<option value='sql'>SQL</option>
+					<option value='mysql'>SQL</option>
 					<option value='xml'>XML</option>
 				</select>
 				<button id="save-button">Save</button>
 			</span>
 		</div>
+
 	</div>
-	<div id="editor"></div>
+
 	<script type='text/javascript'>
-		var myCodeMirror = CodeMirror(document.body, {
-			value: "function myScript(){return 100;}\n"
-			, mode:  "javascript"
+		$(function(){
+			var cmEditor = CodeMirror(document.getElementById('content'), {
+				value: "function myScript(){return 100;}\n"
+				, mode:  "javascript"
+				, theme: "monokai"
+				, lineNumbers: true
+				, gutter: true
+			});
+
+			$('#language').change(function(){
+				setMode(this.value);
+			})
+
+
+			//Toggle CodeMirror editor between different language modes
+			var setMode = function(mode) {
+				//For some reason JSON is just javascript with an argument...
+				if ( mode === 'json'){
+					mode = { name: "javascript", json: true}
+				}
+				CodeMirror.modeURL = "/static/js/codemirror-2.34/mode/%N/%N.js"
+				cmEditor.setOption("mode", mode);
+				CodeMirror.autoLoadMode(cmEditor, mode);
+			}
+
+			//Retrieve the past as indicated in the URL hash
+			var getPaste  = function(){
+				var hash = window.location.hash.replace(/^#/, '');
+				$.ajax({
+					url: '/v1/get/' + hash
+					,success: function(res){
+						//Parse JSON response
+						var resData = JSON.parse(res);
+						//change the dropdown box to parsedData.language
+						$('#language').val(resData.language);
+						//set the language mode to parsedData.language
+						setMode(resData.language);
+						setShortUrl(hash);
+					}
+				})
+			}
+
+			//Set the contents of the URL display field
+			var setShortUrl = function(hash){
+				$('#short_url').val('http://'+window.location.host + '/#' + hash );
+				window.location.hash = "#" + hash;
+			}
+
+			if (window.location.hash){
+				getPaste();
+			}
+
+			window.onhashchange = getPaste;
+
 		});
 	</script>
 </body>
