fix typo'd key name

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
 				var language = $('#language').val();
 				var paste_data = cmEditor.getValue();
 				var payload = {
-					"paste_data": input
+					"paste_data": paste_data
 					,"language": language
 				}
 
