add missing references to plaintext filemode

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
 			<span style="float: right">
 				<label for='language'>Language:</label>
 				<select id='language'>
-					<option value=''>Plaintext</option>
+					<option value='text'>Plaintext</option>
 					<option value='shell'>Bash</option>
 					<option value='clike'>C#</option>
 					<option value='javascript'>Javascript</option>
