--- a/templates/index.html
+++ b/templates/index.html
@@ -3,69 +3,12 @@
 <head>
 	<link rel="stylesheet" href="static/js/codemirror-2.34/lib/codemirror.css">
 	<link rel="stylesheet" href="static/js/codemirror-2.34/theme/monokai.css">
-	<style type='text/css'>
-		body {
-			margin: 0px;
-			padding: 0px;
-			overflow: auto;
-			color: #333;
-			height: 100%;
-			background-color: #fbfbfb;
-			font: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
-		}
+	<link rel="stylesheet" href="static/css/pastie.css">
 
-		#content{
-			/*border: 3px solid #971111;
-			background-color: #DDD;*/
-			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			padding-top: 155px;
-		}
-		/*So note carefully that, in order to resize the editor, you set a width on the wrapper (.CodeMirror)
-		and a height on the scroller (class CodeMirror-scroll) element.*/
-		.CodeMirror {
-			border: 1px solid #eee;
-			font-size: 12px;
-			line-height: 1.2;
-		}
-
-		.CodeMirror-lines {
-			margin-left: 15px;
-		}
-		.CodeMirror-scroll {
-			height: auto;
-			min-height: 650px;
-			overflow-y: hidden;
-			overflow-x: auto;
-		}
-
-		#header-content{
-			/*border: 2px solid #279895;
-			background-color: #FFF;*/
-			padding: 0px 10px 0px 10px;
-			font-size: 22px;
-			height: 150px;
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-		}
-
-		input, textarea, button {
-			font: 15px 'Monaco', 'Bitstream Vera Sans', 'Courier', monospace;
-		}
-
-		#short_url{
-			width:275px;
-		}
-
-	</style>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	<script src="/static/js/codemirror-2.34/lib/codemirror.js"></script>
-	<script src="/static/js/codemirror-2.34/lib/util/loadmode.js"></script>
+	<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<script type='text/javascript' src="/static/js/codemirror-2.34/lib/codemirror.js"></script>
+	<script type='text/javascript' src="/static/js/codemirror-2.34/lib/util/loadmode.js"></script>
+	<script type='text/javascript' src="/static/js/pastie.js" ></script>
 </head>
 <body>
 	<div id="content">
@@ -93,88 +36,5 @@
 		</div>
 
 	</div>
-
-	<script type='text/javascript'>
-		$(function(){
-			var cmEditor = CodeMirror(document.getElementById('content'), {
-				theme: "monokai"
-				, lineNumbers: true
-				, gutter: true
-			});
-
-			$('#language').change(function(){
-				setMode(this.value);
-			})
-
-
-			//Toggle CodeMirror editor between different language modes
-			var setMode = function(mode) {
-
-				//For some reason JSON is just javascript with an argument...
-				if ( mode === 'json'){
-					mode = { name: "javascript", json: true};
-				// This is simply for legacy pastes already saved with an explicit 'text' mode
-				}
-
-				CodeMirror.modeURL = "/static/js/codemirror-2.34/mode/%N/%N.js";
-				cmEditor.setOption("mode", mode);
-				CodeMirror.autoLoadMode(cmEditor, mode);
-			}
-
-			//Retrieve the past as indicated in the URL hash
-			var getPaste  = function(){
-				var hash = window.location.hash.replace(/^#/, '');
-				$.ajax({
-					url: '/v1/get/' + hash
-					,success: function(res){
-						//Parse JSON response
-						var parsedRes = JSON.parse(res);
-
-						//change the dropdown box to parsedData.language
-						$('#language').val(parsedRes.language);
-
-						//set the language mode to parsedData.language
-						setMode(parsedRes.language);
-
-						//set the editor value to parsedData.paste_data
-						cmEditor.setValue(parsedRes.paste_data);
-
-						setShortUrl(hash);
-					}
-				})
-			}
-
-			//Set the contents of the URL display field
-			var setShortUrl = function(hash){
-				$('#short_url').val('http://'+window.location.host + '/#' + hash );
-				window.location.hash = "#" + hash;
-			}
-
-			$('#save-button').click(function(){
-				var language = $('#language').val();
-				var paste_data = cmEditor.getValue();
-				var payload = {
-					"paste_data": paste_data
-					,"language": language
-				}
-
-				$.ajax({
-					url:'/v1/save'
-					, type: 'POST'
-					, data: {"data":JSON.stringify(payload)}
-					, success: function(res){
-						setShortUrl(res)
-					}
-				})
-			});
-
-			if (window.location.hash){
-				getPaste();
-			}
-
-			window.onhashchange = getPaste;
-
-		});
-	</script>
 </body>
 </html>
