fix incorrect value for css dropdown

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 					<option value='text'>Plaintext</option>
 					<option value='shell'>Bash</option>
 					<option value='clike'>C#</option>
-					<option value='clike'>CSS</option>
+					<option value='css'>CSS</option>
 					<option value='javascript'>Javascript</option>
 					<option value='json'>JSON</option>
 					<option value='lua'>Lua</option>
