make java option point to 'clike' mode

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 					<option value='shell'>Bash</option>
 					<option value='clike'>C#</option>
 					<option value='css'>CSS</option>
-					<option value='java'>Java</option>
+					<option value='clike'>Java</option>
 					<option value='javascript'>Javascript</option>
 					<option value='json'>JSON</option>
 					<option value='lua'>Lua</option>
