--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
 <head>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
 	<link rel="stylesheet" href="static/js/codemirror-2.34/lib/codemirror.css">
-	<link rel="stylesheet" href="static/js/codemirror-2.34/theme/monokai.css">
+	<link rel="stylesheet" href="static/js/codemirror-2.34/theme/early-space.css">
+	<link rel="stylesheet" href="static/css/main.css">
 	<link rel="stylesheet" href="static/css/pastie.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
 	<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script type='text/javascript' src="/static/js/codemirror-2.34/lib/codemirror.js"></script>
@@ -13,10 +17,19 @@
 <body>
 	<div id="content">
 		<div id="header-content">
-			<h1>Pastie</h1>
-			<label for='short_url'>URL:</label>
-			<input type='text' disabled='disabled' id='short_url'></input>
-			<span style="float: right">
+			<div class="row">
+				<a href="/" id="logo"><h1><i class="fa fa-terminal"></i>Pastie</h1></a>
+
+				<div class="shortcut-container">
+					<button id="save-button"><i class="fa fa-floppy-o"></i>Save</button>
+					<div class="tooltip">
+					<div class="arrow"></div>
+						<small>CTRL + S</small>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
 				<label for='language'>Language:</label>
 				<select id='language'>
 					<option value='text'>Plaintext</option>
@@ -33,8 +46,14 @@
 					<option value='mysql'>SQL</option>
 					<option value='xml'>XML</option>
 				</select>
-				<button id="save-button">Save</button>
-			</span>
+			</div>
+
+			<div class="row">
+				<div class="url">
+					<label for='short_url'>URL:</label>
+					<input type='text' disabled='disabled' id='short_url'></input>
+				</div>
+			</div>
 		</div>
 
 	</div>
