--- a/static/css/pastie.css
+++ b/static/css/pastie.css
@@ -87,14 +87,14 @@ and a height on the scroller (class CodeMirror-scroll) element.*/
 .CodeMirror {
 	font-size: 12px;
 	line-height: 1.2;
+	height: 100%;
 }
 
 .CodeMirror-lines {
 	margin-left: 15px;
 }
 .CodeMirror-scroll {
-	height: auto;
-	min-height: 650px;
+	height: 100%;
 	overflow-y: hidden;
 	overflow-x: auto;
 }
