--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,15 @@
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="static/js/codemirror-2.34/lib/codemirror.css">
-	<link rel="stylesheet" href="static/js/codemirror-2.34/theme/early-space.css">
+	<link rel="stylesheet" href="static/js/codemirror-4.5/lib/codemirror.css">
+	<link rel="stylesheet" href="static/js/codemirror-4.5/theme/early-space.css">
 	<link rel="stylesheet" href="static/css/pastie.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
 	<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	<script type='text/javascript' src="/static/js/codemirror-2.34/lib/codemirror.js"></script>
-	<script type='text/javascript' src="/static/js/codemirror-2.34/lib/util/loadmode.js"></script>
-	<script type='text/javascript' src="/static/js/pastie.js" ></script>
+	<script type='text/javascript' src="/static/js/codemirror-4.5/lib/codemirror.js"></script>
+	<script type='text/javascript' src="/static/js/loadmode.js"></script>
+	<script type='text/javascript' src="/static/js/pastie.js"></script>
 </head>
 <body>
 	<div id="content">
